<resources>
    <string name="app_name">Christine</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_register">Sign in</string>

    <!-- Strings related to login -->

    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_basic">Basic Example</string>
    <string name="title_activity_asynchronous">Asynchronous Events</string>
    <string name="async_error">Could not download events from the internet</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_height">Height(Centimeter)</string>
    <string name="prompt_weight">Weight(Kilograms)</string>
    <string name="prompt_dob">Age</string>
    <string name="prompt_register">Register</string>
    <string name="prompt_race">Race</string>
    <string name="prompt_activity">Are You Physically Active?</string>
    <string name="prompt_waist">Waistline Size</string>
    <string name="prompt_proceed">Proceed</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_desired">Desired Weight</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string-array name="gender">
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_weekly">WeeklyActivity</string>
    <string name="title_activity_activities">ActivitiesActivity</string>
    <string name="title_activity_home">Weight Management</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_weekly_activitities">Weekly Activities</string>
    <string name="title_activity_lifestyle">Lifestyle Advice</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_add_meal_preference">AddMealPreferenceActivity</string>
    <string name="title_activity_meals">MealsActivity</string>
</resources>
